deploy: make Kafka optional, configurable CORS, Render setup